--- a/app/views/user_chat/user_chat.html.erb
+++ b/app/views/user_chat/user_chat.html.erb
@@ -30,7 +30,7 @@
     <div class="name p-2 rounded-3" data-id="<%= current_user.id %>">
       <h3 class="h3"><%= @room.title %></h3>
     </div>
-    <div class="messages">
+    <div class="messages" data-id="<%= @room.id %>">
         <%= render 'message'  %>
     </div>
   </div>
