--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -1,5 +1,5 @@
 @import "../css/users";
-@import "../css/user_chat";
+@import "../css/rooms";
 @import "../css/main";
 @import 'mdb-ui-kit/src/scss/mdb.free.scss';
 @font-face {
