add message controller

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -36,7 +36,7 @@
   </div>
   <div class="two_forms">
     <div class="for_post" data-id="<%= @recipient.id %>">
-      <%= bootstrap_form_with model: @model_name, url: room_create_message_path, method: :post, id: "message_form" do |f| %>
+      <%= bootstrap_form_with model: @model_name, url: create_message_path, method: :post, id: "message_form" do |f| %>
         <p>
           <br>
           <%= f.text_field :input_message, class: "text_field", placeholder: "Write something...", type: "text", required: 'required'%>
