delete webpack and configuring js and scss files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css'%>
-    <%= stylesheet_pack_tag 'application' %>
-    <%= javascript_pack_tag 'application' %>
+    <%= stylesheet_link_tag 'application' %>
+    <%#= javascript_pack_tag 'application' %>
+    <%= javascript_importmap_tags %>
 
   </head>
 
