finished rails7 and started hotwire

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%#= javascript_pack_tag 'application' %>
     <%= javascript_importmap_tags %>
 
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   </head>
 
   <body>
