--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -13,6 +13,8 @@
   </div>
 </header>
 
+<%= turbo_stream_from @room %>
+
 <%# if Room.count === 0 %>
 <div class="full_screen">
   <div class="for_user_page">
