finished hotwire with turbo-rails

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,18 +1,21 @@
-  <div class="our_messages" id="messages">
-    <% @messages.each do |message| %>
-      <% if message.user_id == @recipient.id %>
-        <div class="your" data-user_id=<% @recipient.id %>>
+
+    <% if message.user_id == message.recipient.id %>
+      <%= turbo_frame_tag dom_id(message), class: 'your' do %>
+        <div class="your" data-user_id=
+          <% message.recipient.id %>>
           <% if message.file %>
             <div id="for_file_downloading">
               <%= link_to message.file, '/files/' + message.file, class: "link link-info", download: message.file %>
             </div>
           <% end %>
-          <div class= "alert alert-primary message">
-            <p class="text color time"><%= l(message.created_at, format: :message_time ) %> </p>
+          <div class="alert alert-primary message">
+            <p class="text color time"><%= l(message.created_at, format: :message_time) %> </p>
             <p class="text content"><%= Obscenity.replacement(:stars).sanitize(message.body) %></p>
           </div>
         </div>
-      <% else %>
+      <% end %>
+    <% else %>
+      <%= turbo_frame_tag dom_id(message), class: 'my' do %>
         <div class="my">
           <% if message.file %>
             <div id="for_file_downloading">
@@ -21,9 +24,8 @@
           <% end %>
           <div class="alert alert-primary message">
             <p class="text content"><%= Obscenity.replacement(:stars).sanitize(message.body) %></p>
-            <p class="text color time"><%= l(message.created_at, format: :message_time ) %> </p>
+            <p class="text color time"><%= l(message.created_at, format: :message_time) %> </p>
           </div>
         </div>
       <% end %>
     <% end %>
-  </div>
