--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -99,6 +99,10 @@ button {
   height: 80px;
 }
 
+.width{
+  width: 100%;
+}
+
 .center {
   display: flex;
   justify-content: center;
@@ -224,6 +228,9 @@ header {
   margin-right: 10px;
   margin-top: 3px;
 }
-turbo-frame{
-
+.hidden{
+display: none;
+}
+.pink{
+  background-color: #f3bdff;
 }
