--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,7 +1,7 @@
 <header class="header">
-  <div class = "general">
+  <div class="general">
     <div class="left">
-      <div class = "hello">
+      <div class="hello">
         <h3 class="user"><%= @user_name %></h3>
       </div>
     </div>
@@ -16,10 +16,10 @@
         </div>
       <% end %>
       <div class="margin">
-        <%= link_to t(:go_back), root_path, class: "btn btn-light btn-outline-warning"%>
+        <%= link_to t(:go_back), root_path, class: "btn btn-light btn-outline-warning" %>
       </div>
       <div class="margin">
-        <%= link_to t(:exit), destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
+        <%= link_to t(:exit), destroy_user_session_path, data: { confirm: "Are you sure?" }, :method => :delete, class: "btn btn-light btn-outline-danger" %>
       </div>
     </div>
   </div>
@@ -29,16 +29,14 @@
 
 <div class="for_all border border-primary border-3 rounded-6">
   <div class="output rounded-4">
-    <div class="name p-2 rounded-3" data-id="<%= current_user.id %>">
+    <div class="name p-2 rounded-3" data-id="<%= params[:id] %>">
       <h3 class="h3"><%= @room.title %></h3>
     </div>
     <div class="messages" data-id="<%= @room.id %>">
       <div class="our_messages" id="messages">
         <%= turbo_frame_tag :messages, class: 'our' do %>
-          <% if @messages != [] %>
-            <% @messages.each do |message| %>
-              <%= render partial: 'messages/message', locals: {message: message, recipient: @recipient}  %>
-            <% end %>
+          <% @messages.each do |message| %>
+              <%= render partial: 'messages/message', locals: { message: message, cur_user: @current_user } %>
           <% end %>
         <% end %>
       </div>
@@ -46,41 +44,41 @@
   </div>
   <div class="two_forms">
     <div class="for_post" data-id="<%= @recipient.id %>">
-        <%= bootstrap_form_with model: @model_name, url: message_create_path(recipient_id: @recipient.id), id: "message_form" do |f| %>
-          <p>
-            <br>
-            <%= f.text_field :input_message, class: "text_field", placeholder: "Write something...", type: "text", required: 'required'%>
-            <%= f.file_field :file, name: "file", accept: "/home/user/RubymineProjects/demo/app/assets/images/*", type: 'file' %>
-          </p>
+      <%= bootstrap_form_with model: @model_name, url: message_create_path(recipient_id: @recipient.id), id: "message_form" do |f| %>
+        <p>
+          <br>
+          <%= f.text_field :body, autofocus: true, class: "text_field", placeholder: "Write something...", type: "text", required: 'required' %>
+          <%#= f.file_field :file, name: "file", accept: "/home/user/RubymineProjects/demo/app/assets/images/*", type: 'file' %>
+        </p>
 
-          <p>
-            <%= f.submit t(:send), class: "btn btn-info", id: "button_send_message"%>
-          </p>
-        <% end %>
+        <p>
+          <%= f.submit t(:send), class: "btn btn-info", id: "button_send_message" %>
+        </p>
+      <% end %>
     </div>
-<!--    <div class="for_websocket" data-id="<%#= @recipient.id %>" >-->
-      <%#= bootstrap_form_with model: @model_name, url: message_create_path, method: :patch, id: "websocket_form" do |f| %>
-<!--        <p>-->
-<!--          <br>-->
-          <%#= f.text_field :input_for_websocket, class: "text_field", placeholder: "Write something...", type: "text", required: 'required'%>
-<!--        </p>-->
+    <!--    <div class="for_websocket" data-id="<%#= @recipient.id %>" >-->
+    <%#= bootstrap_form_with model: @model_name, url: message_create_path, method: :patch, id: "websocket_form" do |f| %>
+    <!--        <p>-->
+    <!--          <br>-->
+    <%#= f.text_field :input_for_websocket, class: "text_field", placeholder: "Write something...", type: "text", required: 'required'%>
+    <!--        </p>-->
 
-<!--        <p>-->
-          <%#= f.submit t(:send), class: "btn btn-light btn-info", id: "button_for_websocket"%>
-<!--        </p>-->
-      <%# end %>
-<!--    </div>-->
+    <!--        <p>-->
+    <%#= f.submit t(:send), class: "btn btn-light btn-info", id: "button_for_websocket"%>
+    <!--        </p>-->
+    <%# end %>
+    <!--    </div>-->
     <div class="for_turbo-rails">
-        <%= bootstrap_form_with model: @new_message, url: message_sent_path(room_id: params[:room_id], recipient_id: params[:recipient_id]), id: "websocket_form" do |f| %>
-          <p>
-            <br>
-            <%= f.text_field :body, autofocus: true, class: "text_field", placeholder: "Write something...", type: "text", required: 'required'%>
-          </p>
+      <%= bootstrap_form_with model: @new_message, url: message_sent_path(room_id: params[:room_id], recipient_id: params[:recipient_id]), id: "websocket_form" do |f| %>
+        <p>
+          <br>
+          <%= f.text_field :body, autofocus: true, class: "text_field", placeholder: "Write something...", type: "text", required: 'required' %>
+        </p>
 
-          <p>
-            <%= f.submit t(:send), class: "btn btn-info", id: "button_for_websocket"%>
-          </p>
-        <% end %>
+        <p>
+          <%= f.submit t(:send), class: "btn btn-info", id: "button_for_websocket" %>
+        </p>
+      <% end %>
     </div>
   </div>
 </div>
