--- a/app/views/users/_rooms.html.erb
+++ b/app/views/users/_rooms.html.erb
@@ -1,6 +1,6 @@
 <div class="for_table">
   <table class="table">
-    <thead class="thead-dark">
+    <thead class="bg-zinc-300">
     <tr>
       <th scope="col">#</th>
       <th scope="col"><%= t(:rooms) %></th>
@@ -14,17 +14,17 @@
       <% counter = 1 + (5 * (params[:page].to_i - 1)) %>
     <% end %>
     <% @rooms.each do |room|%>
-        <tr class="<%= cycle('white', 'blue', 'dark-blue') -%>">
+        <tr>
           <th scope="row"><%= counter %></th>
           <% counter += 1 %>
           <td><%= room.title %></td>
           <td><% if room.user_id != current_user.id %>
-                <%= link_to room_path(id: current_user.id, room_id: room.id, recipient_id: room.user_id), class: "btn btn-outline-secondary btn-sm" do %>
+                <%= link_to room_path(id: current_user.id, room_id: room.id, recipient_id: room.user_id), class: "shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-2.5 rounded" do %>
                     <%= t(:messages) %>
                 <% end %>
               <% else %>
                 <% rec_id = UserRoom.where(room_id: room.id).first %>
-                <%= link_to room_path(id: current_user.id, room_id: room.id, recipient_id: rec_id.user_id), class: "btn btn-outline-secondary btn-sm" do %>
+                <%= link_to room_path(id: current_user.id, room_id: room.id, recipient_id: rec_id.user_id), class: "shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-2.5 rounded" do %>
                   <%= t(:messages) %>
                 <% end %>
               <% end %>
