--- a/app/views/users/_rooms.html.erb
+++ b/app/views/users/_rooms.html.erb
@@ -4,19 +4,19 @@
     <tr>
       <th scope="col">#</th>
       <th scope="col"><%= t(:rooms) %></th>
-      <th colspan="1"></th>
+      <th colspan="2"></th>
     </tr>
     </thead>
     <tbody>
-    <% if params[:page].to_i === 0%>
-      <% counter = 1 %>
-    <% else %>
-      <% counter = 1 + (5 * (params[:page].to_i - 1)) %>
-    <% end %>
+    <%# if params[:page].to_i === 0%>
+      <%# counter = 1 %>
+    <%# else %>
+      <%# counter = 1 + (5 * (params[:page].to_i - 1)) %>
+    <%# end %>
     <% @rooms.each do |room|%>
         <tr>
-          <th scope="row"><%= counter %></th>
-          <% counter += 1 %>
+          <th scope="row"><%#= counter %></th>
+          <%# counter += 1 %>
           <td><%= room.title %></td>
           <td><% if room.user_id != current_user.id %>
                 <%= link_to room_path(id: current_user.id, room_id: room.id, recipient_id: room.user_id), class: "shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-2.5 rounded" do %>
