--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,12 @@
 <header>
-  <div class = "general">
       <div class = "hello">
         <h3 class="user"><%= @user_name %></h3>
       </div>
     <div class="right items-center">
       <div class="mr-1.5 items-center">
-        <%= link_to t(:go_back), root_path, class: "shadow bg-yellow-500 hover:bg-yellow-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-3 rounded" %>
+        <%= link_to t(:go_back), root_path, class: "back shadow bg-yellow-500 hover:bg-yellow-400 focus:shadow-outline focus:outline-none text-white font-bold rounded mr-4 ml-1" %>
       </div>
     </div>
-  </div>
 </header>
 
 <div class="full_screen">
