--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,34 +1,45 @@
-<div class="for_table">
-  <table class="table">
-    <thead class="bg-zinc-300">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col"><%= t(:email) %></th>
-      <th colspan="1"></th>
-    </tr>
-    </thead>
-    <tbody>
-    <% if params[:page].to_i === 0%>
-      <% counter = 1 %>
-    <% else %>
-      <% counter = 1 + (5 * (params[:page].to_i - 1)) %>
-    <% end %>
-    <% users.each do |user|%>
-      <% if user != current_user %>
-        <tr class="<%= cycle('bg-blue-50', 'bg-blue-100', 'bg-blue-200') -%>">
-          <th scope="row"><%= counter %></th>
-          <% counter += 1 %>
-          <td><% if user.user_name != '' %>
-                <%= user.user_name %>
-              <% else %>
-                <%= user.email %>
-              <% end %></td>
-          <td><%= link_to new_room_path(recipient_id: user.id),class: "shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-2.5 rounded" do %>
-              <%= t(:messages) %>
-            <% end %></td>
-        </tr>
+<aside class="w-30 h-75" aria-label="Sidebar">
+  <div class="overflow-y-auto py-4 px-3 rounded dark:bg-gray-800">
+    <ul class="space-y-1 alert alert-info">
+      <% users.each do |user| %>
+        <li class="border-teal-500 border-2">
+          <%= link_to new_room_path(recipient_id: user.id), class: "flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700" do %>
+            <span class="ml-3"><% if user.user_name != '' %>
+            <%= user.user_name %>
+          <% else %>
+            <%= user.email %>
+          <% end %></span>
+          <% end %>
+        </li>
       <% end %>
-    <% end %>
-    </tbody>
-  </table>
-</div>
+    </ul>
+  </div>
+</aside>
+
+<!--          <div class="for_table">-->
+<%# if params[:page].to_i === 0 %>
+<%# counter = 1 %>
+<%# else %>
+<%# counter = 1 + (5 * (params[:page].to_i - 1)) %>
+<%# end %>
+<%# users.each do |user| %>
+<!--              <button class="block" type="button" data-modal-toggle="defaultModal">-->
+<!--                <div class="alert alert-info flex w-80">-->
+<!--                  <div class="flex mr-2">-->
+<%#= counter %>
+<%# counter += 1 %>
+<!--                  </div>-->
+<!--                  <div class="flex">-->
+<%# if user.user_name != '' %>
+<%#= user.user_name %>
+<%# else %>
+<%#= user.email %>
+<%# end %>
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </button>-->
+<%# end %>
+<!--          </div>-->
+
+
+<%# end %>
