--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 <header>
-  <div class = "general">
       <div class = "hello">
         <h3 class="user"><%= t(:welcome) %>, <%= @user_name %></h3>
       </div>
@@ -14,28 +13,25 @@
         </div>
       <% end %>
       <div class="mr-1.5 items-center">
-        <%= link_to 'En', root_url(locale: :en), :method => :get, class: "shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-3 rounded" %>
+        <%= link_to 'En', root_url(locale: :en), :method => :get, class: "locale shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold rounded ml-1 mr-1" %>
       </div>
       <div class="mr-1.5 items-center">
-        <%= link_to 'Ua', root_url(locale: :ua), :method => :get, class: "shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-3 rounded" %>
+        <%= link_to 'Ua', root_url(locale: :ua), :method => :get, class: "locale shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold rounded mr-1" %>
       </div>
       <div class="mr-1.5 items-center">
-        <%= link_to t(:exit), destroy_user_session_path, data: {confirm: t(:sure)}, :method => :delete, class: "shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-1.5 px-3 rounded" %>
+        <%= link_to t(:exit), destroy_user_session_path, data: { confirm: t(:sure) }, :method => :delete, class: "exit shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold rounded mr-2" %>
       </div>
     </div>
-  </div>
 </header>
 
-<div class="row">
-  <div class="chat-padding">
+<div class="flex mt-3">
     <%= render 'users', users: @users_show, user_id: @user_id %>
-  </div>
-  <div>
-    <%= render 'rooms' %>
-  </div>
+<!--  <div>-->
+    <%#= render 'rooms' %>
+<!--  </div>-->
 </div>
 
-<div class="chat-pagination">
+<div class="chat-pagination ml-10">
   <nav aria-label="Page navigation example">
     <ul class="pagination">
       <%= paginate @users_show %>
